Update Let's learn math 0721.ipynb

--- a/Let's learn math 0721.ipynb
+++ b/Let's learn math 0721.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "처음 만나는 AI 수학 with 파이썬 (p99~)"
+    "처음 만나는 AI 수학 with 파이썬 (p99~124)"
    ]
   },
   {
